# GCX

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.vizquery  TODO  autogen.sh  configure.ac  dscupload.in  gcx.glade  gcx.info  hen2rcp  makedeb.in
CVS/: Entries
debfiles/: changelog  control  copyright  docs  gcx.doc-base  menu  rules
debfiles/CVS/: Entries  Repository
debian/CVS/: Repository
docs/: Makefile.am  aucyg-res-std.gpl  aucyg-wres-std.gpl  gcx-announce  gcx.1  gcx.ltx  gpl2eps.gp  v-res-mag-zponly.gpl  v-se-color-zponly.gpl  v-se-color.gpl  zp-am-1.gpl  zp-am-2.gpl  zp-t-1.gpl  zp-t-2.gpl
docs/CVS/: Entries  Repository
src/: Makefile.am  aphot.c  astro.c  astro.h  badpix.c  basename.c  camera_indi.c  camera_indi.h  cameragui.c  cameragui.h  catalogs.c  catalogs.h  ccd_frame.c  common_indi.c  common_indi.h  config.h.in  demosaic.c  demosaic.h  dirname.c  dsimplex.c  dsimplex.h  dslr.c  edb.c  errlog.c  filegui.c  filegui.h  focus.c  focus.h  focus_indi.c  focus_indi.h  focuser_indi.c  focuser_indi.h  fwheel_indi.c  fwheel_indi.h  gcx-application.c  gcx-application.h  gcx-imageview.c  gcx-imageview.h  gcx.c  gcx.gresource.xml  (+86 more)
src/CVS/: Entries  Repository
src/ccd/: Makefile.am  aphot.c  badpix.c  ccd.h  ccd_frame.c  dslr.c  dslr.h  jpeg.c  sources.c  tiff.c  warp.c
src/ccd/CVS/: Entries  Repository
src/gsc/: Makefile.am  decode_c.c  dispos.c  dtos.c  embgsc.c  find_reg.c  get_head.c  getgsc.c  gsc.c  gsc.h  prtgsc.c  to_d.c
src/gsc/CVS/: Entries  Repository
src/indi/CVS/: Repository
src/libindi/CVS/: Repository
src/libindiclient/: CMakeLists.txt  README  base64.c  indi.c  lilxml.h
src/libindiclient/CVS/: Entries  Repository
src/libindiclient/gtk/: gtkled.c  gtkled.h  indi_config.c  indi_io.c  indi_list.c  indi_main.c  indigui.c  indisave.c  indisave.h
src/libindiclient/gtk/CVS/: Entries  Repository  Root
src/resources/: camera.ui  pstar.ui  recipe.ui  resources.c  wcsedit.ui  yesno.ui
src/ui/: ccdreduction.ui  entryprompt.ui  expose.ui  exposuredialog.ui  imageview.ui  main-menu.ui  menus.ui  multiband.ui  paramsdialog.ui  paredit.ui  query_window.ui  showtext.ui  skyview.ui
